feat: Creates Amazon S3 Bucket and AWS Lambda stacks with Cloudformation and associate them with Api Gateway

--- a/stacks/amazon-api-gateway.yaml
+++ b/stacks/amazon-api-gateway.yaml
@@ -39,8 +39,7 @@ Resources:
     Properties:
       ApiId: !Ref ApiGateway      
       IntegrationType: AWS_PROXY
-      #TODO: Change function-name by lambda's name
-      IntegrationUri: !Sub "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:<function-name>"
+      IntegrationUri: !Sub "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:simple-serverless-arch-proxy-lambda"
       PayloadFormatVersion: '2.0'
   #####################
   # Categories routes #
