--- a/stacks/amazon-api-gateway.yaml
+++ b/stacks/amazon-api-gateway.yaml
@@ -38,9 +38,9 @@ Resources:
   LambdaIntegration:
     Type: AWS::ApiGatewayV2::Integration
     Properties:
-      ApiId: !Ref ApiGateway      
+      ApiId: !Ref ApiGateway
       IntegrationType: AWS_PROXY
-      IntegrationUri: !Sub "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:simple-serverless-arch-proxy-lambda"
+      IntegrationUri: !ImportValue simple-serverless-arch-aws-lambda-ProxyAwsLambdaRoleArn
       PayloadFormatVersion: '2.0'
   #####################
   # Categories routes #
