--- a/stacks/amazon-api-gateway.yaml
+++ b/stacks/amazon-api-gateway.yaml
@@ -28,6 +28,7 @@ Resources:
         AllowOrigins:
           - !Ref AllowCorsForWhatOrigin
       ProtocolType: HTTP
+      Target: !ImportValue simple-serverless-arch-aws-lambda-ProxyAwsLambdaArn
   ApiGatewayStage:
     Type: AWS::ApiGatewayV2::Stage
     Properties:
@@ -35,79 +36,14 @@ Resources:
       AutoDeploy: True
       StageName: !Ref DeployStage
       #TODO: Put logs: https://docs.aws.amazon.com/apigateway/latest/developerguide/http-api-logging.html
-  LambdaIntegration:
-    Type: AWS::ApiGatewayV2::Integration
+  ApiGatewayPermission:
+    Type: AWS::Lambda::Permission
     Properties:
-      ApiId: !Ref ApiGateway
-      IntegrationType: AWS_PROXY
-      IntegrationUri: !ImportValue simple-serverless-arch-aws-lambda-ProxyAwsLambdaArn
-      PayloadFormatVersion: '2.0'
-  #####################
-  # Categories routes #
-  #####################
-  CreateCategoryRoute:
-    Type: AWS::ApiGatewayV2::Route
-    Properties:
-      ApiId: !Ref ApiGateway
-      AuthorizationType: NONE
-      RouteKey: 'POST /categories'
-  ReadCategoryByIdRoute:
-    Type: AWS::ApiGatewayV2::Route
-    Properties:
-      ApiId: !Ref ApiGateway
-      AuthorizationType: NONE
-      RouteKey: 'GET /categories/{id}'
-  ReadAllCategoryRoute:
-    Type: AWS::ApiGatewayV2::Route
-    Properties:
-      ApiId: !Ref ApiGateway
-      AuthorizationType: NONE
-      RouteKey: 'GET /categories'
-  UpdateCategoryByIdRoute:
-    Type: AWS::ApiGatewayV2::Route
-    Properties:
-      ApiId: !Ref ApiGateway
-      AuthorizationType: NONE
-      RouteKey: 'PUT /categories/{id}'
-  DeleteCategoryByIdRoute:
-    Type: AWS::ApiGatewayV2::Route
-    Properties:
-      ApiId: !Ref ApiGateway
-      AuthorizationType: NONE
-      RouteKey: 'DELETE /categories'
-  ################
-  # Words routes #
-  ################
-  CreateWordRoute:
-    Type: AWS::ApiGatewayV2::Route
-    Properties:
-      ApiId: !Ref ApiGateway
-      AuthorizationType: NONE
-      RouteKey: 'POST /words'
-  ReadWordByIdRoute:
-    Type: AWS::ApiGatewayV2::Route
-    Properties:
-      ApiId: !Ref ApiGateway
-      AuthorizationType: NONE
-      RouteKey: 'GET /words/{id}'
-  ReadAllWordRoute:
-    Type: AWS::ApiGatewayV2::Route
-    Properties:
-      ApiId: !Ref ApiGateway
-      AuthorizationType: NONE
-      RouteKey: 'GET /words'
-  UpdateByIdWordRoute:
-    Type: AWS::ApiGatewayV2::Route
-    Properties:
-      ApiId: !Ref ApiGateway
-      AuthorizationType: NONE
-      RouteKey: 'PUT /words/{id}'
-  DeleteByIdWordRoute:
-    Type: AWS::ApiGatewayV2::Route
-    Properties:
-      ApiId: !Ref ApiGateway
-      AuthorizationType: NONE
-      RouteKey: 'DELETE /words/{id}'
+      FunctionName: !ImportValue simple-serverless-arch-aws-lambda-ProxyAwsLambdaArn
+      Action: lambda:InvokeFunction
+      Principal: apigateway.amazonaws.com
+      SourceAccount: !Ref "AWS::AccountId"
+      SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${ApiGateway}/*/*/*"
 Outputs:
   ApiGateway:
     Value: !Ref ApiGateway
