--- a/proxyLambda/package.json
+++ b/proxyLambda/package.json
@@ -15,7 +15,9 @@
     "@aws-sdk/client-dynamodb": "^3.325.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22",
     "serverless-http": "^3.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
