chore: Allows proxy lambda to execute operations on DynamoDB

--- a/stacks/amazon-dynamodb.yaml
+++ b/stacks/amazon-dynamodb.yaml
@@ -39,4 +39,8 @@ Outputs:
   WordsDynamoDbTable:
     Value: !Ref WordsDynamoDbTable
     Export:
-      Name: !Sub "${AWS::StackName}-WordsDynamoDbTableId"
+      Name: !Sub "${AWS::StackName}-WordsDynamoDbTableName"
+  WordsCategoryDynamoDbTable:
+    Value: !Ref WordsCategoryDynamoDbTable
+    Export:
+      Name: !Sub "${AWS::StackName}-WordsCategoryDynamoDbTableName"
