feat: Creates info route and add cors library in proxyLambda

--- a/stacks/amazon-api-gateway.yaml
+++ b/stacks/amazon-api-gateway.yaml
@@ -29,7 +29,7 @@ Resources:
           - !Ref AllowCorsForWhatOrigin
       ProtocolType: HTTP
       Target: !ImportValue simple-serverless-arch-aws-lambda-ProxyAwsLambdaArn
-      RouteKey: 'ANY /'
+      RouteKey: 'GET /info'
   ApiGatewayPermission:
     Type: AWS::Lambda::Permission
     Properties:
