--- a/proxyLambda/package.json
+++ b/proxyLambda/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.325.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "serverless-http": "^3.2.0"
